<resources>
    <string name="app_name">TSportDB 5</string>
    <string name="app_title">TSportDB</string>
    <string name="app_fav">MY Favorites</string>
    <string name="app_detail_leagues">Detail Leagues</string>
    <string name="app_detail_match">Detail Statistic Match</string>
    <string name="app_search_event">Search match events</string>
    <string name="app_search_team">Search your team</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">TODO</string>

    <!-- all strings -->
    <string name="str_last_match">Last Match</string>
    <string name="str_next_match">Next Match</string>
    <string name="str_standing">Standings</string>
    <string name="str_team">Teams</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="search">Search</string>
    <string name="str_nomatch">NOTHING MATCH DATA!</string>
    <string name="str_noteam">NOTHING TEAM DATA!</string>

    <string name="str_doubledot">:</string>
    <string name="ft">FT</string>
    <string name="str_statis">Statistic Match</string>
    <string name="full_time">Full Time</string>
    <string name="str_nourl">"Nothing link url"</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="formation">Formation</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="goal_keeper">Lineup Goal keeper</string>
    <string name="defense">Lineup Defense</string>
    <string name="midfield">Lineup Midfield</string>
    <string name="forward">Lineup Forward</string>
    <string name="substitutes">Lineup Substitutes</string>
    <string name="goal_details">Goal Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_favorites">My Favorites</string>
    <string name="add_to_favorite">Add to Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="club">Clubs</string>
    <string name="mp">MP</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="pts">Pts</string>
    <string name="d">D</string>
    <string name="instagram">Instagram</string>
    <string name="str_sosmed">Sosial Media</string>
    <string name="description">Description</string>
</resources>
